--- a/src/views/home.html
+++ b/src/views/home.html
@@ -1,5 +1,26 @@
 <div>
     <h1 class="text-center">Bienvenue sur le generateur de quiz</h1>
 
-    
+    <form>
+        <div class="form-group">
+          <label for="exampleFormControlSelect1">Selectioner le theme</label>
+          <select class="form-control theme" id="exampleFormControlSelect1">
+            
+          </select>
+        </div>
+        <div class="form-group">
+            <label for="exampleFormControlSelect1">Selectioner le nombre de question</label>
+            <select class="form-control questionsNumber" id="exampleFormControlSelect1">
+              
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlSelect1">Selectioner le mode de jeu</label>
+            <select class="form-control" id="exampleFormControlSelect1">
+              <option value="0">contre la montre</option>
+              <option value="1">timer pour chaque question</option>
+              <option value="2">No Chrono</option>
+            </select>
+          </div>
+    </form>
 </div>
